[tool.poetry]
name = "math"
version = "0.1.0"
description = ""
authors = ["dylan-slack <dslack@uci.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.27.3"
datasets = "^2.10.1"
torch = "^2.0.0"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
